Fixed alignments

--- a/src/components/css/About.css
+++ b/src/components/css/About.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Manrope:wght@200..800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Manrope:wght@200..800&display=swap");
 
 * {
     overflow: hidden;
@@ -19,7 +19,7 @@
 }
 
 .aboutmain h1 {
-    color: #0096FF;
+    color: #0096ff;
     position: fixed;
     top: 0;
     right: 5%;
@@ -34,13 +34,13 @@
 .aboutcontent {
     display: flex;
     position: fixed;
-    top: 12%;
+    top: 18%;
     left: 3%;
     width: 45%;
     height: 100%;
 }
 .aboutcontent p {
-    font-size: 2.5vw;
+    font-size: 2.3vw;
     font-family: "Jost", sans-serif;
     font-optical-sizing: auto;
     font-weight: 300;
@@ -48,13 +48,12 @@
 }
 .aboutcontent p .highlight {
     font-weight: 400;
-    color: #0096FF;
+    color: #0096ff;
 }
-
 
 @media screen and (max-width: 768px) {
     .aboutmain h1 {
-        top: 7%;
+        top: 5.7%;
         left: 7%;
         font-size: 10vw;
         font-weight: 600;
@@ -67,12 +66,12 @@
     .aboutcontent {
         position: fixed;
         width: 90%;
-        top: 15%;
+        top: 13%;
         left: 5%;
         height: 50%;
     }
     .aboutcontent p {
-        font-size: 4.2vw;
+        font-size: 4.1vw;
         text-justify: auto;
         font-weight: 400;
     }
